Ran some GC analysis, fixed unbounded send queue